Update new site

--- a/index.html
+++ b/index.html
@@ -1,12 +1,236 @@
-<html>
-  <head>
-    <title>200 OK</title>
-  </head>
-  <body>
-    <h1>It work!</h1>
-    <hr>
-    <p>
-      <i>Powered by GitHub Page!</i>
-    </p>
-  </body>
+<!DOCTYPE html>
+<html xmlns="https://www.w3.org/1999/xhtml">
+<head>
+    <title>THPT Lấp Vò 3</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+    <meta name="title" content="THPT Lấp Vò 3">
+    <meta name="keywords" content="thptlapvo3, lapvo3, lap vo 3, thpt lap vo 3, lapvo3.com, lapvo3.tk, ngthuc, nguyen thuc, nguyên thức, thpt lấp vò 3, lấp vò 3, thpt lấp vò 3 - đồng tháp, pk.over, ngthuc.com">
+    <meta name="description" content="The 1st fake site of Lap Vo 3 High School. Author: Nguyen Thuc - ngthuc.com">
+    <meta property="og:site_name" content="THPT Lap Vo 3"/>
+    <meta property="og:title" content="THPT Lap Vo 3"/>
+    <meta property="og:url" content="https://lapvo3.tk"/>
+    <meta property="og:image" content="/img/logo_lv3.png"/>
+    <meta property="og:description" content="Nguyen Thuc is the provider of page apps on Facebook"/>
+    <link rel="alternate" type="text/html" href="https://lapvo3.tk/" hreflang="x-default" title="THPT Lap Vo 3"/>
+    <link rel="shortcut icon" type="image/ico" href="img/logo_lv3.png" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+    <style media="screen">
+      body {
+        width:100%;
+        max-width:500px;
+        margin:0 auto;
+        padding:10px;
+        overflow:auto;
+      }
+
+      ul {
+        margin:0;
+        padding:0;
+        list-style-type:
+        none;
+      }
+
+      #index ul {
+        margin: 0 auto;
+        display:table;
+      }
+
+      li:nth-child(even) {
+        float:right;
+      }
+
+      .app_area {
+        float:left;
+        width:100%;
+        border: solid 1px #F2F0F0;
+        padding:10px;
+        line-height:1.4em;
+        margin:5px 0 5px 0;
+      }
+
+      .app_area:hover {
+        background: #F2F0F0;
+      }
+
+      .icon_img img {
+        width:65px;
+      }
+
+      .left_area {
+        float:left;
+        text-align:center;
+        width:70px;
+      }
+
+      .right_area {
+        margin: 0 0 0 90px;
+      }
+
+      .app_name {
+        font-weight:bold;
+        color:#534F4F;
+        font-size:13pt;
+      }
+
+      .desc {
+        margin-top:6px;
+        color:#534F4F;
+        font-size:11pt;
+      }
+
+      #index a:link {
+        text-decoration:none;
+      }
+
+      #index a:visited {
+        text-decoration:none;
+      }
+
+      .page_plugin {
+        display:none;
+      }
+
+      #footer_area {
+        text-align:center;
+        color:#828282;
+        font-size:9pt;
+        margin-top:10px;
+      }
+
+      @media all and (min-width:500px) {
+        .page_plugin {
+          display:block;
+        }
+      }
+    </style>
+
+    <!--GoogleAnalyticsObject-->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-85541760-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+    <!--Lapvo3Analytics-->
+</head>
+<body>
+    <div id="index">
+        <ul>
+            <a>
+            </a>
+            <a>
+                <li>
+                    <div class="left_area">
+                        <img src="img/logo_stu.png" border=0 title="THPT Lấp Vò 3">
+                    </div>
+                    <div class="right_area" align="center">
+                        <div class="app_name"> THPT Lấp Vò 3 </div>
+                        <div class="desc">
+                            <div>ĐT 852, Hưng Nhơn, Long Hưng B, Lấp Vò, Đồng Tháp. (0277)3 670 635</div>
+                        </div>
+                    </div>
+                </li>
+            </a>
+            <a href="http://lapvo3.dongthap.edu.vn/" target="_blank"/>
+                <li class="app_area">
+                    <div class="left_area">
+                        <div class="icon_img"><img src="img/home_icon.png" border=0></div>
+                    </div>
+                    <div class="right_area">
+                        <div class="app_name"> Trang chủ </div>
+                    </div>
+                </li>
+            </a>
+            <a href="https://facebook.com/thptlapvo3" target="_blank"/>
+                <li class="app_area">
+                    <div class="left_area">
+                        <div class="icon_img"><img src="img/facebook_circle.png" border=0></div>
+                    </div>
+                    <div class="right_area">
+                        <div class="app_name">Facebook Page</div>
+                        <div class="desc">
+                            <div> THPT Lấp Vò 3 - Đồng Tháp </div>
+                        </div>
+                    </div>
+                </li>
+            </a>
+            <a href="https://www.youtube.com/channel/UCFsjwrUJsBQ4o2loTbhky8Q">
+                <li class="app_area">
+                    <div class="left_area">
+                        <div class="icon_img"><img src="img/youtube.png" border=0></div>
+                    </div>
+                    <div class="right_area">
+                        <div class="app_name">YouTube</div>
+                        <div class="desc">
+                            <div> THPT Lấp Vò 3 </div>
+                        </div>
+                    </div>
+                </li>
+            </a>
+            <a href="http://me.zing.vn/u/pk.over">
+                <li class="app_area">
+                    <div class="left_area">
+                        <div class="icon_img"><img src="img/zing_me.png" border=0 width="75px" height="75px"></div>
+                    </div>
+                    <div class="right_area">
+                        <div class="app_name">Zing Me Page</div>
+                        <div class="desc">
+                            <div> Kỉ niệm Lấp Vò 3 </div>
+                        </div>
+                    </div>
+                </li>
+            </a>
+            <a href="https://myaccount.google.com/u/0/brandaccounts/101952653411502911951/view">
+                <li class="app_area">
+                    <div class="left_area">
+                        <div class="icon_img"><img src="img/googleplus.png" border=0></div>
+                    </div>
+                    <div class="right_area">
+                        <div class="app_name">Google Brand Admin</div>
+                        <div class="desc">
+                            <div> THPT Lấp Vò 3 </div>
+                        </div>
+                    </div>
+                </li>
+            </a>
+        </ul>
+    </div>
+    <div id="footer_area">
+        <div id="footer_line">
+            <div class="copyright">© 2017 <a data-toggle="modal" data-target="#sgModal"> THPT Lấp Vò 3 - Facebook Page</a><br /> All rights reserved.</div>
+        </div>
+    </div>
+
+    <!--signModal-->
+        <div class="modal fade" id="sgModal" role="dialog">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title"> Administrator Info </h4>
+                    </div>
+                    <div class="modal-body">
+                        <b>FanPage THPT Lấp Vò 3 - Đồng Tháp</b><br />
+                           Admin: Nguyên Thức<br />
+                           Contacts: <a href="mailto:ngthuc@lapvo3.tk">ngthuc@lapvo3.tk</a><br />
+                           Date: 20/11/2016</p>
+                    </div>
+                    <div class="modal-footer">
+                        <a type="button" class="btn btn-default" href="https://ngthuc.com/" target="_blank">NgThuc's Website</a>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+</body>
 </html>
