--- a/index.html
+++ b/index.html
@@ -126,25 +126,21 @@
 <body>
     <div id="index">
         <ul>
-            <a>
-            </a>
-            <a>
-                <li>
-                    <div class="left_area">
-                        <img src="img/logo_stu.png" border=0 title="THPT Lấp Vò 3">
+           <li>
+                <div class="left_area">
+                    <img src="img/logo_stu.png" border=0 title="THPT Lấp Vò 3">
+                </div>
+                <div class="right_area" align="center">
+                    <div class="app_name"> THPT Lấp Vò 3 </div>
+                    <div class="desc">
+                        <div>ĐT 852, Hưng Nhơn, Long Hưng B, Lấp Vò, Đồng Tháp. (0277)3 670 635</div>
                     </div>
-                    <div class="right_area" align="center">
-                        <div class="app_name"> THPT Lấp Vò 3 </div>
-                        <div class="desc">
-                            <div>ĐT 852, Hưng Nhơn, Long Hưng B, Lấp Vò, Đồng Tháp. (0277)3 670 635</div>
-                        </div>
-                    </div>
-                </li>
-            </a>
+                </div>
+            </li>
             <a href="http://lapvo3.dongthap.edu.vn/" target="_blank"/>
                 <li class="app_area">
                     <div class="left_area">
-                        <div class="icon_img"><img src="img/home_icon.png" border=0></div>
+                        <div class="icon_img"><img src="img/home_icon.png" alt="homepage" border=0></div>
                     </div>
                     <div class="right_area">
                         <div class="app_name"> Trang chủ </div>
@@ -154,7 +150,7 @@
             <a href="https://facebook.com/thptlapvo3" target="_blank"/>
                 <li class="app_area">
                     <div class="left_area">
-                        <div class="icon_img"><img src="img/facebook_circle.png" border=0></div>
+                        <div class="icon_img"><img src="img/facebook_circle.png" alt="facebook" border=0></div>
                     </div>
                     <div class="right_area">
                         <div class="app_name">Facebook Page</div>
@@ -167,7 +163,7 @@
             <a href="https://www.youtube.com/channel/UCFsjwrUJsBQ4o2loTbhky8Q">
                 <li class="app_area">
                     <div class="left_area">
-                        <div class="icon_img"><img src="img/youtube.png" border=0></div>
+                        <div class="icon_img"><img src="img/youtube.png" alt="youtube" border=0></div>
                     </div>
                     <div class="right_area">
                         <div class="app_name">YouTube</div>
@@ -180,7 +176,7 @@
             <a href="http://me.zing.vn/u/pk.over">
                 <li class="app_area">
                     <div class="left_area">
-                        <div class="icon_img"><img src="img/zing_me.png" border=0 width="75px" height="75px"></div>
+                        <div class="icon_img"><img src="img/zing_me.png" alt="zingme" border=0 width="75px" height="75px"></div>
                     </div>
                     <div class="right_area">
                         <div class="app_name">Zing Me Page</div>
@@ -193,7 +189,7 @@
             <a href="https://myaccount.google.com/u/0/brandaccounts/101952653411502911951/view">
                 <li class="app_area">
                     <div class="left_area">
-                        <div class="icon_img"><img src="img/googleplus.png" border=0></div>
+                        <div class="icon_img"><img src="img/googleplus.png" alt="google" border=0></div>
                     </div>
                     <div class="right_area">
                         <div class="app_name">Google Brand Admin</div>
@@ -207,7 +203,7 @@
     </div>
     <div id="footer_area">
         <div id="footer_line">
-            <div class="copyright">© 2017 <a data-toggle="modal" data-target="#sgModal"> THPT Lấp Vò 3 - Facebook Page</a><br /> All rights reserved.</div>
+            <div class="copyright" data-toggle="modal" data-target="#sgModal">© 2017 THPT Lấp Vò 3 - Facebook Page<br /> All rights reserved.</div>
         </div>
     </div>
 
