--- a/index.html
+++ b/index.html
@@ -126,17 +126,19 @@
 <body>
     <div id="index">
         <ul>
-           <li>
-                <div class="left_area">
-                    <img src="img/logo_stu.png" border=0 title="THPT Lấp Vò 3">
-                </div>
-                <div class="right_area" align="center">
-                    <div class="app_name"> THPT Lấp Vò 3 </div>
-                    <div class="desc">
-                        <div>ĐT 852, Hưng Nhơn, Long Hưng B, Lấp Vò, Đồng Tháp. (0277)3 670 635</div>
+            <a href="http://lapvo3.dongthap.edu.vn/" target="_blank"/>
+                <li>
+                    <div class="left_area">
+                        <img src="img/logo_stu.png" border=0 title="THPT Lấp Vò 3">
                     </div>
-                </div>
-            </li>
+                    <div class="right_area" align="center">
+                        <div class="app_name"> THPT Lấp Vò 3 </div>
+                        <div class="desc">
+                            <div>ĐT 852, Hưng Nhơn, Long Hưng B, Lấp Vò, Đồng Tháp. 02773.670.352</div>
+                        </div>
+                    </div>
+                </li>
+            </a>
             <a href="http://lapvo3.dongthap.edu.vn/" target="_blank"/>
                 <li class="app_area">
                     <div class="left_area">
@@ -173,7 +175,7 @@
                     </div>
                 </li>
             </a>
-            <a href="http://me.zing.vn/u/pk.over">
+            <!-- <a href="http://me.zing.vn/u/pk.over">
                 <li class="app_area">
                     <div class="left_area">
                         <div class="icon_img"><img src="img/zing_me.png" alt="zingme" border=0 width="75px" height="75px"></div>
@@ -185,8 +187,8 @@
                         </div>
                     </div>
                 </li>
-            </a>
-            <a href="https://myaccount.google.com/u/0/brandaccounts/101952653411502911951/view">
+            </a> -->
+            <!-- <a href="https://myaccount.google.com/u/0/brandaccounts/101952653411502911951/view">
                 <li class="app_area">
                     <div class="left_area">
                         <div class="icon_img"><img src="img/googleplus.png" alt="google" border=0></div>
@@ -198,12 +200,12 @@
                         </div>
                     </div>
                 </li>
-            </a>
+            </a> -->
         </ul>
     </div>
     <div id="footer_area">
         <div id="footer_line">
-            <div class="copyright" data-toggle="modal" data-target="#sgModal">© 2017 THPT Lấp Vò 3 - Facebook Page<br /> All rights reserved.</div>
+            <div class="copyright" data-toggle="modal" data-target="#sgModal">© 2021 THPT Lấp Vò 3 - Facebook Page<br /> All rights reserved.</div>
         </div>
     </div>
 
@@ -216,7 +218,7 @@
                         <h4 class="modal-title"> Administrator Info </h4>
                     </div>
                     <div class="modal-body">
-                        <b>FanPage THPT Lấp Vò 3 - Đồng Tháp</b><br />
+                        <b>Managed by Lap Vo 3 High School Alumni</b><br />
                            Admin: Nguyên Thức<br />
                            Contacts: <a href="mailto:ngthuc@lapvo3.tk">ngthuc@lapvo3.tk</a><br />
                            Date: 20/11/2016</p>
